--- a/allart.html
+++ b/allart.html
@@ -234,7 +234,7 @@
                         <div class="container d-flex text-center flex-column align-items-center mb-70">
                             <p class="sub-heading mb-15">
                                 <span class="icon">{</span>
-                                <span class="text"> If the images do not load properly, please refresh the page!</span>
+                                <span class="text"> shizu</span>
                                 <span class="icon">}</span>
                             </p>
                             <h2 class="section-title">All Artworks</h2>
