--- a/allart.html
+++ b/allart.html
@@ -260,7 +260,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraTweetEdited.png" title="Gura" data-size="905x1280">
-                                                    <img  src="assets/img/project/project1/GuraTweetEdited.png" srcset="assets/img/project/project1/GuraTweetEdited.png 2x, assets/img/project/project1/GuraTweetEdited.png 4x" alt="Recent Works" ">
+                                                    <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/GuraTweetEdited.png" alt="Recent Works" ">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -279,7 +279,7 @@
                                         <div class="folio-item">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraChristmas.png" title="Gura" data-size="905x1280">
-                                                    <img  src="assets/img/project/project1/GuraChristmas.png" srcset="assets/img/project/project1/GuraChristmas.png 1x, assets/img/project/project1/GuraChristmas.png" alt="Recent Works" >
+                                                    <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/GuraChristmas.png" alt="Recent Works" >
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -299,7 +299,7 @@
                                 <div class="folio-item">
                                     <div class="has-popup folio-item__thumb">
                                         <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Rushia Completed.png" title="Rushia" data-size="500x500">
-                                            <img  src="assets/img/project/project1/Rushia Completed.png" srcset="assets/img/project/project1/Rushia Completed.png 4x, assets/img/project/project1/Rushia Completed.png 4x" alt="Rushia" >
+                                            <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Rushia Completed.png" alt="Rushia" >
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
@@ -316,7 +316,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/Clopez.png" title="Clopez" data-size="905x1280">
-                                                    <img  src="assets/img/project/project3/Clopez.png" srcset="assets/img/project/project3/Clopez.png 2x, assets/img/project/project3/Clopez.png 4x" alt="Commission" >
+                                                    <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project3/Clopez.png" alt="Commission" >
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -334,7 +334,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/CyanideNewNoJacketTransparemt.png" title="Cyanide" data-size="905x1280">
-                                                    <img src="assets/img/project/project2/CyanideNewNoJacketTransparemt.png" srcset="assets/img/project/project2/CyanideNewNoJacketTransparemt.png 2x, assets/img/project/project2/CyanideNewNoJacketTransparemt.png 4x" alt="Commissioned Piece" >
+                                                    <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project2/CyanideNewNoJacketTransparemt.png" alt="Commissioned Piece" >
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -354,7 +354,7 @@
                                         <div class="folio-item">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/Mia.png" title="Squili!" data-size="500x500">
-                                                    <img  src="assets/img/project/project3/Mia.png" srcset="assets/img/project/project3/Mia.png 4x, assets/img/project/project3/Mia.png 4x" alt="Commission" >
+                                                    <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project3/Mia.png" alt="Commission" >
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -370,7 +370,7 @@
                                         <div class="folio-item">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/CnBD.png" title="Squili" data-size="500x500">
-                                                    <img src="assets/img/project/project3/CnBD.png" srcset="assets/img/project/project3/CnBD.png 4x, assets/img/project/project3CnBD.png 4x" alt="Commission">
+                                                    <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project3/CnBD.png" alt="Commission">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -386,7 +386,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/CyanideNew Transparent.png" title="Cyanide" data-size="905x1280">
-                                                    <img height="500" src="assets/img/project/project2/CyanideNew Transparent.png" srcset="assets/img/project/project2/CyanideNew Transparent.png 2x, assets/img/project/project2/CyanideNew Transparent.png 4x" alt="Commissioned Piece" >
+                                                    <img class="cover-bg-img" height="500" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project2/CyanideNew Transparent.png" alt="Commissioned Piece" >
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -404,7 +404,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/owl jacket.png" title="Rymm" data-size="905x1280">
-                                                    <img src="assets/img/project/project2/owl jacket.png" srcset="assets/img/project/project2/owl jacket.png 2x, assets/img/project/project2/owl jacket.png 4x" alt="Commissioned Piece" >
+                                                    <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project2/owl jacket.png" alt="Commissioned Piece" >
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -422,7 +422,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/owl.png" title="Rymm" data-size="905x1280">
-                                                    <img src="assets/img/project/project2/owl.png" srcset="assets/img/project/project2/owl.png 2x, assets/img/project/project2/owl.png 4x" alt="Commissioned Piece" >
+                                                    <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project2/owl.png" alt="Commissioned Piece" >
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -440,7 +440,7 @@
                                         <div class="folio-item">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/E.png" title="E" data-size="905x1280">
-                                                    <img src="assets/img/project/project3/E.png" srcset="assets/img/project/project3/E.png 1x, assets/img/project/project3/E.png" alt="Commission">
+                                                    <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project3/E.png" alt="Commission">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -459,7 +459,7 @@
                                         <div class="folio-item">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/hakozs.png" title="Bae" data-size="500x500">
-                                                    <img width="529.5" src="assets/img/project/project1/hakozs.png" srcset="assets/img/project/project1/hakozs.png 4x, assets/img/project/project1/hakozs.png 4x" alt="Rushia">
+                                                    <img class="cover-bg-img" width="529.5" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/hakozs.png" alt="Rushia">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
