--- a/allart.html
+++ b/allart.html
@@ -241,7 +241,7 @@
                         <div class="container d-flex text-center flex-column align-items-center mb-70">
                             <p class="sub-heading mb-15">
                                 <span class="icon">{</span>
-                                <span class="text"> shizu: Pleaase Reload the page if images are stacking/overlapping!</span>
+                                <span class="text"> shizu: Pleaase ReSize the page if images are stacking/overlapping!</span>
                                 <span class="icon">}</span>
                             </p>
                             <h2 class="section-title">All Artworks</h2>
