--- a/CommStatus.html
+++ b/CommStatus.html
@@ -183,13 +183,13 @@
                             <div class="nav-content">
                                 <p class="title-line">Social!</p>
                                 <p class="links over-hidden">
-                                    <a href="https://twitter.com/@kikiis_art" data-hover-text="@kikiis_art" class="link-hover">Twitter</a
+                                    <a href="https://twitter.com/@shirozu07" data-hover-text="@shirozu07" class="link-hover">Twitter</a
               >
             </p>
             <p class="links over-hidden">
               <a
                 href="https://www.pixiv.net/en/users/72475260"
-                data-hover-text="kikiis_art"
+                data-hover-text="shirozu07"
                 class="link-hover"
                 >Pixiv</a
               >
@@ -212,7 +212,7 @@
                 </a>
                                     </li>
                                     <li>
-                                        <a href="https://twitter.com/kikiis_art" target="_blank" rel="nofollow">Twitter.
+                                        <a href="https://twitter.com/shirozu07" target="_blank" rel="nofollow">Twitter.
                   <div class="icon-circle"></div>
                 </a>
                                     </li>
@@ -317,7 +317,7 @@
 
                                             </div>
                                             <div class="social-item over-hidden">
-                                                <a class="link-hover" data-hover-text="Twitter." href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&screen_name=kikiis_art" target="_blank" rel="nofollow">Twitter.</a
+                                                <a class="link-hover" data-hover-text="Twitter." href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&screen_name=shirozu07" target="_blank" rel="nofollow">Twitter.</a
                         >
                       </div>
                     </li>
