--- a/Fanart.html
+++ b/Fanart.html
@@ -187,13 +187,13 @@
                             <div class="nav-content">
                                 <p class="title-line">Social!</p>
                                 <p class="links over-hidden">
-                                    <a href="https://twitter.com/@kikiis_art" data-hover-text="@kikiis_art" class="link-hover">Twitter</a
+                                    <a href="https://twitter.com/@shirozu07" data-hover-text="@shirozu07" class="link-hover">Twitter</a
               >
             </p>
             <p class="links over-hidden">
               <a
                 href="https://www.pixiv.net/en/users/72475260"
-                data-hover-text="kikiis_art"
+                data-hover-text="shirozu07"
                 class="link-hover"
                 >Pixiv</a
               >
@@ -216,7 +216,7 @@
                 </a>
                                     </li>
                                     <li>
-                                        <a href="https://twitter.com/kikiis_art" target="_blank" rel="nofollow">Twitter.
+                                        <a href="https://twitter.com/shirozu07" target="_blank" rel="nofollow">Twitter.
                   <div class="icon-circle"></div>
                 </a>
                                     </li>
@@ -330,12 +330,29 @@
                                 <div class="folio-item">
                                     <div class="has-popup folio-item__thumb">
                                         <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/hakozs.png" title="Bae" data-size="500x500">
-                                            <img width="529.5" src="assets/img/project/project1/hakozs.png" srcset="assets/img/project/project1/hakozs.png 4x, assets/img/project/project1/hakozs.png 4x" alt="Rushia">
+                                            <img width="529.5" src="assets/img/project/project1/hakozs.png" srcset="assets/img/project/project1/hakozs.png 4x, assets/img/project/project1/hakozs.png 4x" alt="Hakoz">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
                                         <div class="folio-item__cat">illustration/FanArt</div>
                                         <h4 class="folio-item__title">Hakoz!</h4>
+                                    </div>
+                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1609531062266523649?s=20&t=-_FbAskUu-SOeeb-KIaalg" title="Twitter" class="folio-item__project-link">Twitter</a>
+
+                                </div>
+                            </div>
+
+                            <!-- end column -->
+                            <div class="column" data-aos="fade-up">
+                                <div class="folio-item">
+                                    <div class="has-popup folio-item__thumb">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Miku11.png" title="Bae" data-size="500x500">
+                                            <img width="529.5" src="assets/img/project/project1/Miku11.png" srcset="assets/img/project/project1/Miku11.png 4x, assets/img/project/project1/Miku11.png 4x" alt="Miku">
+                                        </a>
+                                    </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">illustration/FanArt</div>
+                                        <h4 class="folio-item__title">MIKU!</h4>
                                     </div>
                                     <a target=”blank” href="https://twitter.com/kikiis_art/status/1609531062266523649?s=20&t=-_FbAskUu-SOeeb-KIaalg" title="Twitter" class="folio-item__project-link">Twitter</a>
 
@@ -438,7 +455,7 @@
 
                                         </div>
                                         <div class="social-item over-hidden">
-                                            <a class="link-hover" data-hover-text="Twitter." href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&screen_name=kikiis_art" target="_blank" rel="nofollow">Twitter.</a
+                                            <a class="link-hover" data-hover-text="Twitter." href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&screen_name=shirozu07" target="_blank" rel="nofollow">Twitter.</a
                     >
                   </div>
                 </li>
@@ -570,7 +587,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&screen_name=kikiis_art" target="_blank">
+                <a href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&screen_name=shirozu07" target="_blank">
                     <i class="fab fa-twitter"></i>
                     <span>Tw</span>
                 </a>
