--- a/allart.html
+++ b/allart.html
@@ -216,7 +216,7 @@
                 </a>
                                     </li>
                                     <li>
-                                        <a href="https://twitter.com/kikiis_art" target="_blank" rel="nofollow">Twitter.
+                                        <a href="https://twitter.com/shirozu07" target="_blank" rel="nofollow">Twitter.
                   <div class="icon-circle"></div>
                 </a>
                                     </li>
@@ -551,7 +551,7 @@
 
                                         </div>
                                         <div class="social-item over-hidden">
-                                            <a class="link-hover" data-hover-text="Twitter." href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&screen_name=kikiis_art" target="_blank" rel="nofollow">Twitter.</a
+                                            <a class="link-hover" data-hover-text="Twitter." href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&screen_name=shirozu07" target="_blank" rel="nofollow">Twitter.</a
                     >
                   </div>
                 </li>
