--- a/lore.html
+++ b/lore.html
@@ -171,13 +171,13 @@
                             <div class="nav-content">
                                 <p class="title-line">Social!</p>
                                 <p class="links over-hidden">
-                                    <a href="https://twitter.com/@kikiis_art" data-hover-text="@kikiis_art" class="link-hover">Twitter</a
+                                    <a href="https://twitter.com/@shirozu07" data-hover-text="@shirozu07" class="link-hover">Twitter</a
               >
             </p>
             <p class="links over-hidden">
               <a
                 href="https://www.pixiv.net/en/users/72475260"
-                data-hover-text="kikiis_art"
+                data-hover-text="shirozu07"
                 class="link-hover"
                 >Pixiv</a
               >
@@ -200,7 +200,7 @@
                 </a>
                                     </li>
                                     <li>
-                                        <a href="https://twitter.com/kikiis_art" target="_blank" rel="nofollow">Twitter.
+                                        <a href="https://twitter.com/shirozu07" target="_blank" rel="nofollow">Twitter.
                   <div class="icon-circle"></div>
                 </a>
                                     </li>
@@ -278,7 +278,7 @@
                         </li>
                         <li class="over-hidden">
                           <a
-                            href="https://twitter.com/kikiis_art"
+                            href="https://twitter.com/shirozu07"
                             data-dsn="parallax"
                             target="_blank"
                             rel="nofollow"
@@ -302,7 +302,7 @@
                         data-hover-text="Visit Twitter?"
                         target="_blank"
                         rel="nofollow"
-                        href='https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&screen_name=kikiis_art'
+                        href='https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&screen_name=shirozu07'
                         >Kiroki Shirozu</a>
 
                                                 </h5>
@@ -363,7 +363,7 @@
 
                                           </div>
                                           <div class="social-item over-hidden">
-                                              <a class="link-hover" data-hover-text="Twitter." href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&screen_name=kikiis_art" target="_blank" rel="nofollow">Twitter.</a
+                                              <a class="link-hover" data-hover-text="Twitter." href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&screen_name=shirozu07" target="_blank" rel="nofollow">Twitter.</a
                       >
                     </div>
                   </li>
@@ -525,7 +525,7 @@
           </a>
                                         </li>
                                         <li>
-                                            <a href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&screen_name=kikiis_art" target="_blank">
+                                            <a href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&screen_name=shirozu07" target="_blank">
                                                 <i class="fab fa-twitter"></i>
                                                 <span>Twitter</span>
 
