--- a/Fanart.html
+++ b/Fanart.html
@@ -346,7 +346,7 @@
                             <div class="column" data-aos="fade-up">
                                 <div class="folio-item">
                                     <div class="has-popup folio-item__thumb">
-                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Miku11.png" title="Bae" data-size="500x500">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Miku11.png" title="Miku" data-size="500x500">
                                             <img width="529.5" src="assets/img/project/project1/Miku11.png" srcset="assets/img/project/project1/Miku11.png 4x, assets/img/project/project1/Miku11.png 4x" alt="Miku">
                                         </a>
                                     </div>
@@ -355,6 +355,24 @@
                                         <h4 class="folio-item__title">MIKU!</h4>
                                     </div>
                                     <a target=”blank” href="https://twitter.com/kikiis_art/status/1609531062266523649?s=20&t=-_FbAskUu-SOeeb-KIaalg" title="Twitter" class="folio-item__project-link">Twitter</a>
+
+                                </div>
+                            </div>
+
+                            <!-- end column -->
+                             <!-- end column -->
+                             <div class="column" data-aos="fade-up">
+                                <div class="folio-item">
+                                    <div class="has-popup folio-item__thumb">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Makima1.png" title="Makima" data-size="500x500">
+                                            <img width="529.5" src="assets/img/project/project1/Makima1.png" srcset="assets/img/project/project1/Makima1.png 4x, assets/img/project/project1/Makima1.png 4x" alt="Makima">
+                                        </a>
+                                    </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">illustration/FanArt</div>
+                                        <h4 class="folio-item__title">MIKU!</h4>
+                                    </div>
+                                    <a target=”blank” href="https://twitter.com/shirozu07/status/1650585193139544064?s=20" title="Twitter" class="folio-item__project-link">Twitter</a>
 
                                 </div>
                             </div>
