--- a/allart.html
+++ b/allart.html
@@ -241,7 +241,7 @@
                         <div class="container d-flex text-center flex-column align-items-center mb-70">
                             <p class="sub-heading mb-15">
                                 <span class="icon">{</span>
-                                <span class="text"> shizu: Please ReSize the page if images are stacking/overlapping!</span>
+                                <span class="text"> shizu: Please Resize the page if images are stacking/overlapping! or select an tag it will be fixed!</span>
                                 <span class="icon">}</span>
                             </p>
                             <h2 class="section-title">All Artworks</h2>
@@ -494,7 +494,7 @@
                                             </div>
                                             <div class="folio-item__info">
                                                 <div class="folio-item__cat">illustration/FanArt</div>
-                                                <h4 class="folio-item__title">Hakoz!</h4>
+                                                <h4 class="folio-item__title">Miku</h4>
                                             </div>
                                             <a target=”blank” href="https://twitter.com/kikiis_art/status/1609531062266523649?s=20&t=-_FbAskUu-SOeeb-KIaalg" title="Twitter" class="folio-item__project-link">Twitter</a>
         
@@ -505,13 +505,13 @@
                                     <div class="column" data-aos="fade-up">
                                         <div class="folio-item">
                                             <div class="has-popup folio-item__thumb">
-                                                <a class=" folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Makima1.png" title="Makima" data-size="500x500">
-                                                    <img class="cover-bg-img" width="529.5" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Makima1.png" alt="FanArt">
+                                                <a class=" folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Makima1.png" title="Makima" data-size="1000x500">
+                                                    <img class="cover-bg-img"  src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Makima1.png" alt="FanArt">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
                                                 <div class="folio-item__cat">illustration/FanArt</div>
-                                                <h4 class="folio-item__title">Hakoz!</h4>
+                                                <h4 class="folio-item__title">Makima!</h4>
                                             </div>
                                             <a target=”blank” href="https://twitter.com/shirozu07/status/1650585193139544064?s=20" title="Twitter" class="folio-item__project-link">Twitter</a>
         
