--- a/index.html
+++ b/index.html
@@ -253,12 +253,13 @@
                                                     <div class="metas d-inline-block mb-30">
                                                         <span>Commission</span>
                                                         <span>information</span>
-
-                                                        <div class="d-block">
+                                                    </div>
+                                                        <div class="d-block"></div>
                                                         <h2 class="title user-no-selection d-inline-block ">
                                                             <a class="effect-ajax" data-dsn-ajax="slider">Info</a>
                                                         </h2>
-                                                    </div>
+                                                        
+                                                    
                                                         <p class="max-w570 mt-30 description ">Want to Commission me? Head over to TOS page first there will be commission link.</p>
                                                     </div>
                                                 </div>
@@ -266,7 +267,7 @@
                                             </div>
 
                                         </div>
-                                    </div>>
+                                    </div>
                                 </div>
                             </div>
 
@@ -532,7 +533,7 @@
                                             <span class="line-bg-right">Commissions through, Discord.</span>
                                         </p>
                                         <h2 class="section-title title-cap">Pricing and discord link</h2>
-                                        <a target=”_blank” href="oric.html" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
+                                        <a target=”_blank” href="oric.html" class="mt-30 dsn-button image-zoom effect-ajax" data-dsn="parallax">
                                             <span class="dsn-border border-color-reverse-color"></span> Click here <span>⟶</span>
                                         </a>
                                         <br>
@@ -540,7 +541,7 @@
                                     </div>
                                     <div>
                                         <h2 class="section-title title-cap">TOS</h2>
-                                        <a href="TOS.html" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
+                                        <a href="TOS.html" class="mt-30 dsn-button image-zoom effect-ajax" data-dsn="parallax">
 
                                             <span class="dsn-border border-color-reverse-color"></span> Terms and service (Important)<span>⟶</span>
                                         </a>
