--- a/Commissions.html
+++ b/Commissions.html
@@ -407,7 +407,7 @@
                                         <span class="line-bg-right">Commissions through, Discord.</span>
                                     </p>
                                     <h2 class="section-title title-cap">Pricing and discord link</h2>
-                                    <a target=”_blank” href="oric.html" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
+                                    <a target=”_blank” href="oric.html" class="mt-30 dsn-button image-zoom effect-ajax" data-dsn="parallax">
                                         <span class="dsn-border border-color-reverse-color"></span> Click here <span>⟶</span>
                                     </a>
                                     <br>
@@ -415,7 +415,7 @@
                                 </div>
                                 <div>
                                     <h2 class="section-title title-cap">TOS</h2>
-                                    <a href="TOS.html" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
+                                    <a href="TOS.html" class="mt-30 dsn-button image-zoom effect-ajax" data-dsn="parallax">
 
                                         <span class="dsn-border border-color-reverse-color"></span> Terms and service (Important)<span>⟶</span>
                                     </a>
