--- a/oric.html
+++ b/oric.html
@@ -639,7 +639,7 @@
                                                 <span class="line-bg-right">Commissions through, Discord.</span>
                                             </p>
                                             <h2 class="section-title title-cap">Discord</h2>
-                                            <a target=”_blank” href="https://discord.gg/msFcP65Ny8" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
+                                            <a target=”_blank” href="#" class="mt-30 dsn-button image-zoom effect-ajax" data-dsn="parallax">
                                                 <span class="dsn-border border-color-reverse-color"></span> Click here <span>⟶</span>
                                             </a>
                                             <br>
@@ -647,7 +647,7 @@
                                         </div>
                                         <div>
                                             <h2 class="section-title title-cap">TOS</h2>
-                                            <a href="TOS.html" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
+                                            <a href="TOS.html" class="mt-30 dsn-button image-zoom effect-ajax" data-dsn="parallax">
     
                                                 <span class="dsn-border border-color-reverse-color"></span> Terms and service (Important)<span>⟶</span>
                                             </a>
