--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="discrption" content="parallax one page" />
-    <meta name="keyword" content="agency, business, corporate, creative, freelancer, interior, joomla template, K2 Blog, minimal, modern, multipurpose, personal, portfolio, responsive, simple" />
+    <meta name="discrption" content="Home page" />
+    <meta name="keyword" content="Art, business, corporate, creative, freelancer,minimal, modern, multipurpose, personal, portfolio, responsive, simple" />
 
     <!--  Title -->
     <title>
@@ -40,7 +40,7 @@
     <!-- ========== Loading Page ========== -->
     <div class="preloader">
         <span class="percent">0</span>
-        <span class="loading-text text-uppercase">Loading ...</span>
+        <span class="loading-text text-uppercase">Buying Cookies ...</span>
         <div class="preloader-bar">
             <div class="preloader-progress"></div>
         </div>
