--- a/oric.html
+++ b/oric.html
@@ -524,7 +524,7 @@
                                        
                                         
                                         <div class="service-description">
-                                            <h4 class="title-block mb-15">Full illustration, Desktop size</h4>
+                                            <h4 class="title-block mb-15">Full illustration, Splash Art</h4>
                                             <h5 style="color: rgb(190, 190, 190);">390$</h5>
                                         </div>
 
