--- a/oric.html
+++ b/oric.html
@@ -506,7 +506,9 @@
                                             
                                             <div class="service-description">
                                                 <h4 class="title-block mb-15">Character Sheet</h4>
+                                                <a class="effect-ajax" data-dsn-ajax="work-hover" data-img="assets\img\project\project1\Cyanide's Ref Sheet tweet.png">
                                                 <h5 style="color: rgb(190, 190, 190);">330$</h5>
+                                            </a>
                                             </div>
 
                                         </div>
@@ -525,7 +527,7 @@
                                         
                                         <div class="service-description">
                                             <h4 class="title-block mb-15">Full illustration, Splash Art</h4>
-                                            <h5 style="color: rgb(190, 190, 190);">400$</h5>
+                                            <h5 style="color: rgb(190, 190, 190);">390$</h5>
                                         </div>
 
                                     </div>
