--- a/oric.html
+++ b/oric.html
@@ -502,14 +502,18 @@
                                         <div class="line line-left"></div>
                                         <div class="line line-right"></div>
 
-                                        <div class="services-content background-section">
+                                    <div class="services-content background-section">
                                             
-                                            <div class="service-description">
+                                         <div class="service-description text-container">
+                                           
                                                 <h4 class="title-block mb-15">Character Sheet</h4>
+                                                <div class="custom-image-wrapper">
+                                                <img class="hidden-image image1" src="assets/img/project/project1/Cyanide's Ref Sheet tweet.png" alt="Image" >
+                                          </div>
                                                 <h5 style="color: rgb(190, 190, 190);">330$</h5>
-                                            </div>
-
                                         </div>
+
+                                    </div>
                                     </div>
                                 </div>
                                 <div
