--- a/oric.html
+++ b/oric.html
@@ -508,7 +508,7 @@
                                            
                                                 <h4 class="title-block mb-15">Character Sheet</h4>
                                                 <div class="custom-image-wrapper">
-                                                <img class="hidden-image image1" src="assets/img/project/project1/Cyanide's Ref Sheet tweet.png" alt="Image" >
+                                                <img class="hidden-image image1" src="assets/img/project/project1/Cyanide's Ref Sheet tweet.png" alt="Image1" >
                                           </div>
                                                 <h5 style="color: rgb(190, 190, 190);">330$</h5>
                                         </div>
