--- a/personal-2.html
+++ b/personal-2.html
@@ -927,8 +927,7 @@
                                         <div class="metas d-inline-block mb-15">
                                             <span> Product</span> <span>voice</span>
                                         </div>
-                                        <h4 class="sec-title"><a class="effect-ajax" data-dsn-ajax="work" href="project1.html">Maybe
-                                                speaker</a></h4>
+                                        <h4 class="sec-title"><a class="effect-ajax" data-dsn-ajax="work" href="project1.html">demo</a></h4>
                                     </div>
                                 </div>
 
@@ -941,10 +940,10 @@
                                     <div class="box-content" data-swiper-parallaxs="60%"
                                         data-swiper-parallax-opacity="0">
                                         <div class="metas d-inline-block mb-15">
-                                            <span> pen</span>
+                                            <span> demo</span>
                                         </div>
-                                        <h4 class="sec-title"><a class="effect-ajax" data-dsn-ajax="work" href="project2.html">Yaren
-                                                collection</a></h4>
+                                        <h4 class="sec-title"><a class="effect-ajax" data-dsn-ajax="work" href="project2.html">demo
+                                            demo</a></h4>
                                     </div>
                                 </div>
 
@@ -957,10 +956,10 @@
                                     <div class="box-content" data-swiper-parallaxs="60%"
                                         data-swiper-parallax-opacity="0">
                                         <div class="metas d-inline-block mb-15">
-                                            <span> Architecture</span>
+                                            <span> demo</span>
                                         </div>
-                                        <h4 class="sec-title"><a class="effect-ajax" data-dsn-ajax="work" href="project4.html">Principal
-                                                Garden</a></h4>
+                                        <h4 class="sec-title"><a class="effect-ajax" data-dsn-ajax="work" href="project4.html">demo
+                                            demo</a></h4>
                                     </div>
                                 </div>
 
@@ -973,10 +972,10 @@
                                     <div class="box-content" data-swiper-parallaxs="60%"
                                         data-swiper-parallax-opacity="0">
                                         <div class="metas d-inline-block mb-15">
-                                            <span>induction</span>
+                                            <span>demo</span>
                                         </div>
-                                        <h4 class="sec-title"><a class="effect-ajax" data-dsn-ajax="work" href="project3.html">Huggl Power
-                                                Pack</a></h4>
+                                        <h4 class="sec-title"><a class="effect-ajax" data-dsn-ajax="work" href="project3.html">demo
+                                            demo</a></h4>
                                     </div>
                                 </div>
 
@@ -989,10 +988,10 @@
                                     <div class="box-content" data-swiper-parallaxs="60%"
                                         data-swiper-parallax-opacity="0">
                                         <div class="metas d-inline-block mb-15">
-                                            <span>Photography</span>
+                                            <span>demo</span>
                                         </div>
                                         <h4 class="sec-title"><a class="effect-ajax" data-dsn-ajax="work"
-                                                href="project6.html">Lengshuikeng</a></h4>
+                                                href="project6.html">demo</a></h4>
                                     </div>
                                 </div>
 
@@ -1005,7 +1004,7 @@
                                     <div class="box-content" data-swiper-parallaxs="60%"
                                         data-swiper-parallax-opacity="0">
                                         <div class="metas d-inline-block mb-15">
-                                            <span>Photography</span> <span> car</span>
+                                            <span>Photography</span> <span> demo</span>
                                         </div>
                                         <h4 class="sec-title"><a class="effect-ajax" data-dsn-ajax="work" href="project5.html">Small Silver
                                                 Car</a></h4>
