--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!--  Title -->
     <title>
-        kiki's Portfolio
+        Rudy's Portfolio
     </title>
     <meta content="Kiki's portfolio" property="og:title" />
     <meta content="Home page" property="og:description" />
@@ -46,7 +46,7 @@
         </div>
 
         <h1 class="title v-middle">
-            <span class="text-strok">kiki</span>
+            <span class="text-strok">RUDY</span>
             <span class="text-fill">kiki</span>
         </h1>
     </div>
