--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <h1 class="title v-middle">
             <span class="text-strok">RUDY</span>
-            <span class="text-fill">kiki</span>
+            <span class="text-fill">RUDY</span>
         </h1>
     </div>
     <!-- ========== End Loading Page ========== -->
