--- a/Fanart.html
+++ b/Fanart.html
@@ -10,7 +10,7 @@
 
     <!--  Title -->
     <title>
-        kiki's Portfolio
+        Rudy's Portfolio
     </title>
     <meta content="Kiki's portfolio" property="og:title" />
     <meta content="FanArts section" property="og:description" />
@@ -59,8 +59,8 @@
         </div>
 
         <h1 class="title v-middle">
-            <span class="text-strok">kiki</span>
-            <span class="text-fill">kiki</span>
+            <span class="text-strok">Rudy</span>
+            <span class="text-fill">Rudy</span>
         </h1>
     </div>
     <!-- ========== End Loading Page ========== -->
