--- a/absout.html
+++ b/absout.html
@@ -9,7 +9,7 @@
     <meta name="keyword" content="agency, business, corporate, creative, freelancer, interior, joomla template, K2 Blog, minimal, modern, multipurpose, personal, portfolio, responsive, simple" />
 
     <!--  Title -->
-    <title>kiki's portfolio</title>
+    <title> Rudy's portfolio</title>
 
     <!-- Font Google -->
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Poppins:wght@300;400;500;600;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -39,8 +39,8 @@
         </div>
 
         <h1 class="title v-middle">
-            <span class="text-strok">kiki</span>
-            <span class="text-fill">kiki</span>
+            <span class="text-strok">Rudy</span>
+            <span class="text-fill">Rudy</span>
         </h1>
     </div>
     <!-- ========== End Loading Page ========== -->
