--- a/allart.html
+++ b/allart.html
@@ -10,7 +10,7 @@
 
     <!--  Title -->
     <title>
-        kiki's Portfolio
+        Rudy's Portfolio
     </title>
 
     <!-- Font Google -->
@@ -63,8 +63,8 @@
         </div>
 
         <h1 class="title v-middle">
-            <span class="text-strok">kiki</span>
-            <span class="text-fill">kiki</span>
+            <span class="text-strok">Rudy</span>
+            <span class="text-fill">Rudy</span>
         </h1>
     </div>
     <!-- ========== End Loading Page ========== -->
