--- a/oc_commissions.html
+++ b/oc_commissions.html
@@ -10,7 +10,7 @@
 
     <!--  Title -->
     <title>
-        kiki's Portfolio
+        Rudy's Portfolio
     </title>
     <meta content="Kiki's portfolio" property="og:title" />
     <meta content="oc commissions section" property="og:description" />
@@ -60,8 +60,8 @@
         </div>
 
         <h1 class="title v-middle">
-            <span class="text-strok">kiki</span>
-            <span class="text-fill">kiki</span>
+            <span class="text-strok">Rudy</span>
+            <span class="text-fill">Rudy</span>
         </h1>
     </div>
     <!-- ========== End Loading Page ========== -->
