--- a/loli.html
+++ b/loli.html
@@ -60,8 +60,8 @@
         </div>
 
         <h1 class="title v-middle">
-            <span class="text-strok">Rudy</span>
-            <span class="text-fill">Rudy</span>
+            <span class="text-strok">RUDY</span>
+            <span class="text-fill">RUDY</span>
         </h1>
     </div>
     <!-- ========== End Loading Page ========== -->
