--- a/oc_commissions.html
+++ b/oc_commissions.html
@@ -356,10 +356,10 @@
                                 <div class="intro-project-left">
                                     <h4 class="title-block text-uppercase mb-20 ">Project Details</h4>
                                     <ul class="intro-project-list ">
-                                        <li class="p-relative "><strong>Commissioner:</strong>@Cyanide
+                                        <li class="p-relative "><strong>Commissioner:</strong>@Bishiki_Hoshi
                                         </li>
-                                        <li class="p-relative "><strong>Commissioned on:</strong>-</li>
-                                        <li class="p-relative "><strong> Completion Date:</strong>April 2nd 2019</li>
+                                        <li class="p-relative "><strong>Commissioned on:</strong>Dec 2022</li>
+                                        <li class="p-relative "><strong> Completion Date:</strong>August 14nd 2023</li>
                                     </ul>
                                 </div>
                             </div>
@@ -367,7 +367,7 @@
                             <div class="col-lg-7 offset-lg-1">
                                 <div class="intro-project-right">
                                     <h4 class="title-block text-uppercase mb-20 ">Lore</h4>
-                                    <p class="intro-project-description"><span style="color: rgb(184, 32, 32);">Private</span>
+                                    <p class="intro-project-description"><span style="color: rgb(184, 32, 32);">None</span>
                                     </p>
 
                                     <div class="intro-project-cat mt-30 ">
