--- a/work-masonry.html
+++ b/work-masonry.html
@@ -497,7 +497,7 @@
                         <div
                             class="content-hero p-relative d-flex align-items-center text-center flex-column h-100 dsn-hero-parallax-title">
                             <p class="subtitle p-relative line-shap dsn-load-animate ">
-                                <span class="pl-10 pr-10 background-main">shizu</span>
+                                <span class="pl-10 pr-10 background-main">{Thankyou for checking out my work!}</span>
                             </p>
                             <h1 class="title mt-30 dsn-load-animate">
                                 All Artworks
